# aap-juce-witte-eq

./: .gitignore  .gitmodules  Makefile  README.md  aap-juce-support.patch  build.gradle  gradle.properties  settings.gradle  witte-eq-aap.patch
.github/workflows/: actions.yml
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml  cpp
app/src/main/java/com/rmsl/juce/: Java.kt
app/src/main/java/dev/atsushieno/juce/: JuceAppInitializer.kt
app/src/main/res/values/: string.xml
app/src/main/res/xml/: aap_metadata.xml
gradle/wrapper/: gradle-wrapper.properties
plugin/: CMakeLists.txt  build.gradle
plugin/src/main/: AndroidManifest.xml
plugin/src/main/res/values/: string.xml
plugin/src/main/res/xml/: aap_metadata.xml
